[package]
name = "supapasskeys-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.15.0"
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
